force-app/main/default/objects/Todo__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <description>Closed Date</description>
    <inlineHelpText>Closed Date</inlineHelpText>
    <label>ClosedDate</label>
    <type>Date</type>
</CustomField>