force-app/main/default/objects/Todo__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description</description>
    <inlineHelpText>Description</inlineHelpText>
    <label>Description</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>