force-app/main/default/objects/Todo__c/fields/IsTracked__c.field-meta.xml
<CustomField>
    <fullName>IsTracked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Tracked</description>
    <inlineHelpText>Is Tracked</inlineHelpText>
    <label>IsTracked</label>
    <type>Checkbox</type>
</CustomField>